[package]
name = "os"
version = "0.1.0"
authors = ["Grayden Hormes <graydenhormes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-os.json"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[dependencies]
bootloader = "0.9.8"